--- a/Artigo/principal.tex
+++ b/Artigo/principal.tex
@@ -6,6 +6,7 @@
 \usepackage{graphicx}
 \usepackage{pifont}
 \usepackage{pgfmath}
+\usepackage{hyperref}
 
 \titleformat{\chapter}[hang]{\normalfont\bfseries}{\thechapter.}{1em}{}
 \titleformat{\section}[hang]{\normalfont\bfseries}{\thesection.}{1em}{}
