Diagrama de componentes

--- a/Artigo/modelagem_arquitetural.tex
+++ b/Artigo/modelagem_arquitetural.tex
@@ -34,3 +34,18 @@ os sistemas externos como PagSeguro e Ifood para pagamento e pedidos online resp
   \end{figure}
 
   \href{https://github.com/soltein/TCC/blob/main/Diagramas/out/diagrama_container/diagrama_container.png}{Imagem resolução maior}
+
+
+
+  \section{Diagrama de Componentes}
+  Entrando mais em detalhes, temos agora o diagrama de componentes, nele podemos ver as abstrações em caixa preta dos principais componentes
+  do sistema.
+  
+  \begin{figure}[h]
+    \centering
+    \includegraphics[width=0.7\textwidth]{diagrama_componentes.png}
+    \caption{Diagrama de Container}
+    \label{fig:Diagrama de Componentes}
+  \end{figure}
+
+  \href{https://github.com/soltein/TCC/blob/main/Diagramas/diagrama_componentes.png}{Imagem resolução maior}
