--- a/Artigo/principal.tex
+++ b/Artigo/principal.tex
@@ -16,7 +16,6 @@
 \titlespacing{\subsection}{0pt}{0.3cm}{0.1cm}
 
 
-
 \begin{document}
 
 \include{pagina-de-rosto.tex}
@@ -30,6 +29,7 @@
 \include{requisitos_nao_funcionais.tex}
 \include{mecanismos_arquiteturais.tex}
 \include{modelagem_arquitetural.tex}
+\include{video_1.tex}
 
 \bibliographystyle{plain}
 \bibliography{bibliografia}
