--- a/Artigo/modelagem_arquitetural.tex
+++ b/Artigo/modelagem_arquitetural.tex
@@ -28,14 +28,12 @@ os sistemas externos como PagSeguro e Ifood para pagamento e pedidos online resp
 
   \begin{figure}[h]
     \centering
-    \includegraphics[width=0.7\textwidth]{diagrama_container.png}
+    \includegraphics[width=0.9\textwidth]{diagrama_container.png}
     \caption{Diagrama de Container}
     \label{fig:Diagrama de Container}
   \end{figure}
 
   \href{https://github.com/soltein/TCC/blob/main/Diagramas/out/diagrama_container/diagrama_container.png}{Imagem resolução maior}
-
-
 
   \section{Diagrama de Componentes}
   Entrando mais em detalhes, temos agora o diagrama de componentes, nele podemos ver as abstrações em caixa preta dos principais componentes
@@ -43,9 +41,9 @@ os sistemas externos como PagSeguro e Ifood para pagamento e pedidos online resp
   
   \begin{figure}[h]
     \centering
-    \includegraphics[width=0.7\textwidth]{diagrama_componentes.png}
-    \caption{Diagrama de Container}
+    \includegraphics[width=1\textwidth]{diagrama_componentes.png}
+    \caption{Diagrama de Componentes}
     \label{fig:Diagrama de Componentes}
   \end{figure}
 
-  \href{https://github.com/soltein/TCC/blob/main/Diagramas/diagrama_componentes.png}{Imagem resolução maior}
+  \href{https://github.com/soltein/TCC/blob/main/Diagramas/out/diagrama_componentes.png}{Imagem resolução maior}
