--- a/Artigo/bibliografia.bib
+++ b/Artigo/bibliografia.bib
@@ -47,3 +47,12 @@
   address   = {São Paulo},
   edition   = {9. ed.}
 }
+
+@book{Mendes:2002,
+  author    = {Mendes, Antônio},
+  title     = {Arquitetura de software},
+  publisher = {Campus},
+  year      = {2002},
+  address   = {Rio de Janeiro},
+  edition   = {1. ed.}
+}
