--- a/Artigo/atam.tex
+++ b/Artigo/atam.tex
@@ -535,3 +535,23 @@ em autenticação de sistemas, o back end ao receber os dados de acesso gera um 
  arquitetura robusta e eficiente. A busca por uma arquitetura bem equilibrada é um processo contínuo que 
  impulsiona o sucesso do sistema, atendendo às necessidades dos usuários e permitindo sua evolução de 
  forma sustentável.
+
+\chapter{Repositórios}
+
+Abaixo os repositórios utilizados para salvar as informações do projeto integrado.
+\\\\
+\noindent
+Código LATEX para geração do artigo.\\
+\href{https://github.com/soltein/TCC}{https://github.com/soltein/TCC}
+\\\\
+Código Back End Java.\\
+\href{https://github.com/soltein/Arquitetura_Software_PucMinas}{\url{https://github.com/soltein/Arquitetura_Software_PucMinas}}.
+\\\\
+Código Front End Angular\\
+\href{https://github.com/soltein/frontend-arquitetura-pucminas}{https://github.com/soltein/frontend-arquitetura-pucminas}
+
+\chapter{Vídeo Apresentação}
+
+Vídeo de apresentação final do projeto. \\
+
+\href{https://youtu.be/hxmr67Iwvps}{https://youtu.be/hxmr67Iwvps}
